Adição de Mais Serviços e Estilisação das Pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<heroes-list></heroes-list>
+<h2>{{title}}</h2>
+<nav class="navigations-button">
+    <button class="navigations-button__heroes" routerLink="/heroes">Heroes</button>
+    <button class="navigations-button__dashboard" routerLink="/dashboard">Dashboard</button>
+</nav>
+<router-outlet></router-outlet>
