--- a/src/app/components/hero-view/hero-view.component.html
+++ b/src/app/components/hero-view/hero-view.component.html
@@ -1,10 +1,19 @@
-<div *ngIf="hero">
-  <h2>{{hero.name | uppercase}} DETAILS</h2>
-  <div>id: {{hero.id}}</div>
-  <div>
-    <label>Hero name: </label>
-    <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
-  </div>
-</div>
+<section class="list-container">
+  <section class="wrapper">
+    <div *ngIf="hero">
+      <h2>{{hero.name | uppercase}} DETAILS</h2>
 
-
+      <section class="hero-details">
+        <div class="hero-details__container">
+            <span class="hero-details__title-id">ID: </span>
+            <span class="hero-details__text-id">{{hero.id}}</span>
+        </div>
+        <div class="hero-details__container">
+            <span class="hero-details__title-name">NAME: </span>
+            <input class="hero-details__input-name" [(ngModel)]="hero.name" placeholder="name">
+        </div>
+        <button class="hero-details__back-button" (click)="goBack()">Back</button>
+    </section>
+    </div>
+  </section>
+</section>
