--- a/src/app/components/heroes-list/heroes-list.component.html
+++ b/src/app/components/heroes-list/heroes-list.component.html
@@ -1,15 +1,14 @@
 <section class="list-container">
-  <h2>My Heroes</h2>
-  <ul class="heroes">
-    <li class="heroes__list" *ngFor="let hero of heroes">
-      <button [class.heroes-button]="selectedHero !== hero" type="button" (click)="onSelectedHero(hero)"
-      [class.heroes-button__selected]="selectedHero === hero">
-        <span class="heroes-button__badge">{{hero.id}}</span>
-        <span class="heroes-button__name">{{hero.name}}</span>
-      </button>
-    </li>
-    <button *ngIf="selectedHero" class="back-button" (click)="unSelectedHero()"><span>Back</span></button>
-  </ul>
-  <hero-view *ngIf="selectedHero" [hero]="selectedHero"></hero-view>
+  <section class="wrapper">
+    <h2>MY HEROES</h2>
+    <ul class="heroes">
+      <li class="heroes__list" *ngFor="let hero of heroes">
+        <button class="heroes-button" routerLink="/detail/{{hero.id}}" type="button">
+          <span class="heroes-button__badge">{{hero.id}}</span>
+          <span class="heroes-button__name">{{hero.name}}</span>
+        </button>
+      </li>
+    </ul>
+  </section>
 </section>
 
