--- a/src/app/components/heroes-list/heroes-list.component.scss
+++ b/src/app/components/heroes-list/heroes-list.component.scss
@@ -1,14 +1,22 @@
 .list-container{
-  background-color: rgb(204, 204, 204);
-  width: 50%;
-  margin: 0 auto;
-  height: 100vh;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+}
+.wrapper{
+  width: 500px;
+  background-color: rgba(251, 251, 251, 0.893);
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
+  padding: 10px 20px;
+  border: 1px solid #7c7c7cb0;
 }
 h2{
+  text-align: center;
   font-weight: 700;
   font-size: x-large;
-  padding-top: 5rem;
+  padding-top: 1rem;
   margin-bottom: 2rem;
 }
 .heroes{
@@ -24,7 +32,7 @@ h2{
   cursor: pointer;
   position: relative;
   left: 0;
-  width: 10rem;
+  width: 12rem;
   background-color: #EEE;
   margin: 0 auto;
   margin-bottom: .8rem;
@@ -34,30 +42,6 @@ h2{
   align-items: stretch;
   height: 2em;
   border: none;
-  &__selected{
-    background-color: black;
-    cursor: pointer;
-    position: relative;
-    left: 0;
-    width: 10rem;
-    margin: 0 auto;
-    margin-bottom: .8rem;
-    padding: 0;
-    border-radius: 4px;
-    display: flex;
-    align-items: stretch;
-    height: 2em;
-    border: none;
-    color: white;
-    &:hover{
-      background-color: wheat;
-      color: black;
-    }
-    &:active{
-      background-color: #4e1414;
-      color: #ffffff;
-    }
-  }
   &:hover{
     color: #2c3a41;
     background-color: #e6e6e6;
