Adicionado componente de Adição de Herois

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 <nav class="navigations-button">
     <button class="navigations-button__heroes" routerLink="/heroes">Heroes</button>
     <button class="navigations-button__dashboard" routerLink="/dashboard">Dashboard</button>
+    <button class="navigations-button__dashboard" routerLink="/heroAdd">Add Hero</button>
+
 </nav>
 <router-outlet></router-outlet>
