--- a/src/app/components/hero-view/hero-view.component.html
+++ b/src/app/components/hero-view/hero-view.component.html
@@ -1,4 +1,4 @@
-<section class="list-container">
+<section class="container">
   <section class="wrapper">
     <div *ngIf="hero">
       <h2>{{hero.name | uppercase}} DETAILS</h2>
@@ -12,7 +12,10 @@
             <span class="hero-details__title-name">NAME: </span>
             <input class="hero-details__input-name" [(ngModel)]="hero.name" placeholder="name">
         </div>
-        <button class="hero-details__back-button" (click)="goBack()">Back</button>
+        <div>
+            <button class="hero-details__back-button" (click)="goBack()">Back</button>
+            <button class="hero-details__save-button" (click)="saveHero()">Save</button>
+        </div>
     </section>
     </div>
   </section>
