--- a/src/app/components/heroes-list/heroes-list.component.html
+++ b/src/app/components/heroes-list/heroes-list.component.html
@@ -1,4 +1,4 @@
-<section class="list-container">
+<section class="container">
   <section class="wrapper">
     <h2>MY HEROES</h2>
     <ul class="heroes">
